[LOGGING-2708] Add changelog to semantic-release

--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,12 @@
     }],
     ["@semantic-release/npm", {
       "npmPublish": false
-    }]
+    }],
+    ["@semantic-release/changelog", {
+      "changelogFile": "docs/CHANGELOG.md",
+    }],
+    ["@semantic-release/git", {
+      "assets": ["docs/CHANGELOG.md"],
+    }],
   ]
 }
