--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   "dependencies": {},
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
-    "eslint": "^7.3.1"
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.0.7",
+    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/release-notes-generator": "^9.0.1",
+    "eslint": "^7.3.1",
+    "semantic-release": "^17.1.1"
   }
 }
