--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "Apache-2.0",
   "bugs": {
+    "email": "opensource+newrelic-azure-functions@newrelic.com",
     "url": "https://github.com/newrelic-experimental/newrelic-azure-functions/issues"
   },
   "homepage": "https://github.com/newrelic-experimental/newrelic-azure-functions#readme",
