chore: update semantic-release configuration to also package the function as a ZIP artifact and publish it to the release

--- a/.releaserc
+++ b/.releaserc
@@ -5,7 +5,9 @@
     ["@semantic-release/github", {
       "assets": [
         {"path": "BlobForwarder/index.js", name: 'index-BlobForwarder-${nextRelease.gitTag}.js', "label": "BlobForwarder Azure Function"},
-        {"path": "EventHubForwarder/index.js", name: 'index-EventHubForwarder-${nextRelease.gitTag}.js', "label": "EventHubForwarder Azure Function"}
+        {"path": "EventHubForwarder/index.js", name: 'index-EventHubForwarder-${nextRelease.gitTag}.js', "label": "EventHubForwarder Azure Function"},
+        {"path": "EventHubForwarder-${nextRelease.gitTag}.zip", "label": "EventHubForwarder Azure ZipDeploy package"},
+        {"path": "armTemplates/azuredeploy.json","label": "Azure Resource Manager (ARM) Template for the EventHubForwarder function"}
       ]
     }],
     ["@semantic-release/changelog", {
@@ -20,9 +22,13 @@
     ["semantic-release-plugin-update-version-in-files", {
       "files": [
         "BlobForwarder/index.js",
-        "EventHubForwarder/index.js"
+        "EventHubForwarder/index.js",
+        "armTemplates/azuredeploy.json"
       ],
       "placeholder": "0.0.0-development"
+    }],
+    ["@semantic-release/exec", {
+      "prepareCmd": "zip -r EventHubForwarder-${nextRelease.gitTag}.zip EventHubForwarder/function.json EventHubForwarder/index.js host.json package.json"
     }]
   ]
 }
