TODO REVERT: run semantic-release on pushing to the branch instead

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,9 @@
 name: New Relic Azure Functions - Pull Request
 
-on: [pull_request]
+on:
+  push:
+      branches:
+        - LOGGING-6037_define_azure_template
 
 jobs:
   lint:
