TODO REVERT AS WELL

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-  "branches: ["LOGGING-6037_define_azure_template"],
+  "branches": ["LOGGING-6037_define_azure_template"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     ["semantic-release-plugin-update-version-in-files", {
@@ -15,8 +15,8 @@
     }],
     ["@semantic-release/github", {
       "assets": [
-        {"path": "BlobForwarder/index.js", name: 'index-BlobForwarder-${nextRelease.gitTag}.js', "label": "BlobForwarder Azure Function"},
-        {"path": "EventHubForwarder/index.js", name: 'index-EventHubForwarder-${nextRelease.gitTag}.js', "label": "EventHubForwarder Azure Function"},
+        {"path": "BlobForwarder/index.js", "name": "index-BlobForwarder-${nextRelease.gitTag}.js", "label": "BlobForwarder Azure Function"},
+        {"path": "EventHubForwarder/index.js", "name": "index-EventHubForwarder-${nextRelease.gitTag}.js", "label": "EventHubForwarder Azure Function"},
         {"path": "EventHubForwarder-${nextRelease.gitTag}.zip", "label": "EventHubForwarder Azure ZipDeploy package"},
         {"path": "armTemplates/azuredeploy.json","label": "Azure Resource Manager (ARM) Template for the EventHubForwarder function"}
       ]
