--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,8 +5,7 @@
     ["semantic-release-plugin-update-version-in-files", {
       "files": [
         "BlobForwarder/index.js",
-        "EventHubForwarder/index.js",
-        "armTemplates/azuredeploy.json"
+        "EventHubForwarder/index.js"
       ],
       "placeholder": "0.0.0-development"
     }],
@@ -17,8 +16,7 @@
       "assets": [
         {"path": "BlobForwarder/index.js", "name": "index-BlobForwarder-${nextRelease.gitTag}.js", "label": "BlobForwarder Azure Function"},
         {"path": "EventHubForwarder/index.js", "name": "index-EventHubForwarder-${nextRelease.gitTag}.js", "label": "EventHubForwarder Azure Function"},
-        {"path": "EventHubForwarder.zip", "name": "EventHubForwarder-${nextRelease.gitTag}.zip","label": "EventHubForwarder Azure ZipDeploy package"},
-        {"path": "armTemplates/azuredeploy.json","label": "Azure Resource Manager (ARM) Template for the EventHubForwarder function"}
+        {"path": "EventHubForwarder.zip", "label": "EventHubForwarder Azure ZipDeploy package (version ${nextRelease.gitTag})"}
       ]
     }]
   ]
