--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,9 @@
 name: New Relic Azure Functions - Pull Request
 
-on: [pull_request]
+on:
+  push:
+      branches:
+        - LOGGING-6037_define_azure_template
 
 jobs:
   lint:
@@ -20,3 +23,8 @@ jobs:
       run: npm ci
     - name: Run Linting
       run: npm run lint
+
+    - name: Run semantic-release
+      env:
+        GITHUB_TOKEN: ${{ secrets.OPENSOURCE_BOT_TOKEN }}
+      run: npx semantic-release
