--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "lint": "eslint ./**/*.js",
     "package:eventhubforwarder": "zip -r EventHubForwarder.zip EventHubForwarder/function.json EventHubForwarder/index.js host.json package.json",
-    "package:blobforwarder": "zip -r BlobForwarder.zip BlobForwarder/function.json BlobForwarder/index.js host.json package.json"
+    "package:blobforwarder": "zip -r BlobForwarder.zip BlobForwarder/function.json BlobForwarder/index.js host.json package.json",
+    "test": "jest"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["json", "html"]
   },
   "repository": {
     "type": "git",
@@ -17,7 +22,6 @@
     "url": "https://github.com/newrelic-experimental/newrelic-azure-functions/issues"
   },
   "homepage": "https://github.com/newrelic-experimental/newrelic-azure-functions#readme",
-  "dependencies": {},
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/commit-analyzer": "^9.0.2",
@@ -26,10 +30,15 @@
     "@semantic-release/github": "^8.0.7",
     "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
+    "axios": "^1.6.8",
+    "axios-retry": "^4.1.0",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.7.0",
     "prettier": "2.8.1",
-    "semantic-release-plugin-update-version-in-files": "^1.1.0"
+    "semantic-release-plugin-update-version-in-files": "^1.1.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   }
 }
