--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,7 +3,7 @@ name: New Relic Azure Functions - Pull Request
 on: [pull_request]
 
 jobs:
-  lintAndUnitTest:
+  lint:
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,6 +20,21 @@ jobs:
       run: npm ci
     - name: Run Linting
       run: npm run lint
+  unit-test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install Dependencies
+      run: npm ci
     - name: Run Unit test cases
       run: npm test
       env:
@@ -28,4 +43,5 @@ jobs:
         NERD_GRAPH_URL: ${{ secrets.NG_URL }}
         LICENSE_KEY: ${{ secrets.LICENSE_KEY}}
         LOGS_API: ${{secrets.LOGS_API}}
+
 
