--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This repository contains functions to collect and forward logs from Microsoft Azure Blob Storage and Event Hubs.",
   "scripts": {
     "lint": "eslint ./**/*.js",
-    "package:eventhubforwarder": "zip -r EventHubForwarder.zip EventHubForwarder/function.json EventHubForwarder/index.js host.json package.json",
-    "package:blobforwarder": "zip -r BlobForwarder.zip BlobForwarder/function.json BlobForwarder/index.js host.json package.json",
+    "package:eventhubforwarder": "zip -r EventHubForwarder.zip LogForwarder/EventHubForwarder/function.json LogForwarder/index.js host.json package.json",
+    "package:blobforwarder": "zip -r BlobForwarder.zip LogForwarder/BlobForwarder/function.json LogForwarder/index.js host.json package.json",
     "test": "jest"
   },
   "jest": {
