--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,8 +13,7 @@
     }],
     ["semantic-release-plugin-update-version-in-files", {
       "files": [
-        "BlobForwarder/index.js",
-        "EventHubForwarder/index.js"
+        "LogForwarder/index.js"
       ],
       "placeholder": "0.0.0-development"
     }],
@@ -23,8 +22,8 @@
     }],
     ["@semantic-release/github", {
       "assets": [
-        {"path": "BlobForwarder/index.js", "name": "index-BlobForwarder-${nextRelease.gitTag}.js", "label": "BlobForwarder Azure Function"},
-        {"path": "EventHubForwarder/index.js", "name": "index-EventHubForwarder-${nextRelease.gitTag}.js", "label": "EventHubForwarder Azure Function"},
+        {"path": "LogForwarder/index.js", "name": "index-BlobForwarder-${nextRelease.gitTag}.js", "label": "BlobForwarder Azure Function"},
+        {"path": "LogForwarder/index.js", "name": "index-EventHubForwarder-${nextRelease.gitTag}.js", "label": "EventHubForwarder Azure Function"},
         {"path": "EventHubForwarder.zip", "label": "EventHubForwarder Azure ZipDeploy package (version ${nextRelease.gitTag})"},
         {"path": "BlobForwarder.zip", "label": "BlobForwarder Azure ZipDeploy package (version ${nextRelease.gitTag})"}
       ]
