fix: lint was trying to lint the node_modules folder

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.4.1",
   "description": "This repository contains functions to collect and forward logs from Microsoft Azure Blob Storage and Event Hubs.",
   "scripts": {
-    "lint": "eslint ./**/*.js",
+    "lint": "eslint './**/*.js'",
     "package:eventhubforwarder": "mkdir -p EventHubForwarder && cp LogForwarder/index.js EventHubForwarder/index.js && cp LogForwarder/EventHubForwarder/function.json EventHubForwarder/function.json  && zip -r EventHubForwarder.zip EventHubForwarder/function.json EventHubForwarder/index.js host.json package.json && rm -rf EventHubForwarder",
     "package:blobforwarder": "mkdir -p BlobForwarder && cp LogForwarder/index.js BlobForwarder/index.js && cp LogForwarder/BlobForwarder/function.json BlobForwarder/function.json  && zip -r BlobForwarder.zip BlobForwarder/function.json BlobForwarder/index.js host.json package.json && rm -rf BlobForwarder",
     "test": "jest"
