--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          # Avoids using GITHUB_TOKEN and uses the Open Source Bot personal access token instead.
+          # Avoid using GITHUB_TOKEN, instead use the Open Source Bot personal access token.
           persist-credentials: false
 
       # Probably not necessary since the ubuntu-latest image would have latest Node LTS release
